--- a/config/ocaml/link/BUILD.bazel
+++ b/config/ocaml/link/BUILD.bazel
@@ -1,5 +1,4 @@
-load("@bazel_skylib//rules:common_settings.bzl",
-     "bool_flag", "string_setting")
+load("@bazel_skylib//rules:common_settings.bzl", "bool_flag")
 
 bool_flag(name = "verbose", build_setting_default = False,
           tags = ["diagnostics", "verbosity"],
