--- a/test/BUILD.bazel
+++ b/test/BUILD.bazel
@@ -38,6 +38,7 @@ test_ocamlc_byte(
     prologue   = OCAMLC_PROLOGUE,
     main       = OCAMLC_MAIN,
     opts       = OCAML_COMPILER_OPTS,
+    tags       = ["compiler"],
     visibility = ["//visibility:public"]
 )
 
@@ -70,6 +71,7 @@ test_ocamlopt_byte(
     prologue   = OCAMLOPT_PROLOGUE,
     main       = OCAMLOPT_MAIN,
     opts       = OCAML_COMPILER_OPTS,
+    tags       = ["compiler"],
     visibility = ["//visibility:public"]
 )
 
@@ -101,6 +103,7 @@ test_ocamlopt_opt(
     prologue   = OCAMLOPT_PROLOGUE,
     main       = OCAMLOPT_MAIN,
     opts       = OCAML_COMPILER_OPTS,
+    tags       = ["compiler"],
     visibility = ["//visibility:public"]
 )
 
@@ -111,6 +114,7 @@ test_ocamlc_opt(
     prologue   = OCAMLC_PROLOGUE,
     main       = OCAMLC_MAIN,
     opts       = OCAML_COMPILER_OPTS,
+    tags       = ["compiler"],
     visibility = ["//visibility:public"]
 )
 
