--- a/otherlibs/dynlink/BUILD.bazel
+++ b/otherlibs/dynlink/BUILD.bazel
@@ -137,7 +137,6 @@ compiler_module(
         # "//platform/constraints/ocaml/emitter:sys_emitter?": [
         "//config/target/executor:sys_executor?": [
         # "//toolchain/target/executor:sys_executor?": [
-            ":Dynlink_compilerlibs.Cmxs_format_cmi",
             # "//stdlib:Stdlib.Filename",
         ]
     # }) + select({
@@ -414,7 +413,7 @@ compiler_library(
     ],
 )
 
-## resolver
+## ns resolver module
 compiler_module(
     name   = "Dynlink_compilerlibs",
     struct = "dynlink_compilerlibs.ml",
