--- a/testsuite/tests/basic-modules/BUILD.bazel
+++ b/testsuite/tests/basic-modules/BUILD.bazel
@@ -24,6 +24,8 @@ lambda_expect_test(
     name   = "Anonymous_test",
     test_module = ":Anonymous",
     expected = "anonymous.ocamlc.reference",
+    timeout = "short",
+    tags = ["lambda"]
 )
 
 # lambda_expect_vs_test(  ## ocamlopt.byte
